email sent to admin

--- a/views/body.ejs
+++ b/views/body.ejs
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        Welcome "  <%=(data.name) %>"  to easyHR , your just signed up to our platform , wait for verification from the admin 
-       <a href="https://easypay-teamace.netlify.app/api/user/<%=(data.name) %>/verified">verified</a>
-       <br/>
-     <br/>
-     <%=(data.OTP) %>
+     this is body
     </div>
-</body>
+  </body>
 </html>
